--- a/início.css
+++ b/início.css
@@ -13,6 +13,17 @@ header h2 {
     font-size: 45px;
     padding-left: 60px;
     }
+#página {
+        text-align:end;
+        font-size: 22px;
+        list-style: none;
+    }
+    
+#home {
+    text-align:start;
+    font-size: 22px;
+    list-style: none;
+}
 
 body {
     background-color: #521908;
@@ -24,7 +35,9 @@ body {
     letter-spacing: 2px;
     padding-top: 30px;
     padding-bottom: 30px;
-    line-height: 2em;    
+    line-height: 2em;
+         
+    
 }
 
 #parte1 p{
@@ -42,6 +55,8 @@ body {
     padding-top: 20px;
     padding-bottom: 15px;
     border-radius: 5px;
+
+
 }
 
 #parte2 h3 {
@@ -53,12 +68,16 @@ body {
     background-color: #f7ebd3;
     border-radius: 8px;
     }
- img {
+
+    img {
         padding-left: 90px;
         text-align: center;
     }
-
- footer {
+ #controle {
+    display:flex;
+    color:#823919;
+ }
+    footer {
 
         text-align: right;
         font-size: 15px;
