--- a/produtos.css
+++ b/produtos.css
@@ -2,15 +2,15 @@ header {
     text-align: center;
     font-size: 45px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #ca7b42;
-    padding-top: 50px;
-    padding-top: 50px;
+    background-color: white;
+    padding-top: 70px;
+    padding-bottom: 50px;
 }
 
 
 body {
-    background-color: #521908;
-    color:#f7ebd3;
+    
+    color:#521908;
     font-size: 30px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-indent: 5rem;
@@ -18,36 +18,81 @@ body {
     line-height: 2em;
     text-align: center;
     padding-top: 30px;
-    display: grid;
+    }
 
-}
+    h2{
+        background-color: #f7ebd3;
+        border-radius: 15px;
+        padding-bottom: 20px;
+        padding-top: 15px;
+    }
 
 h3 {
     padding-left: 30px;
     padding-right: 30px;
-    color:#ffdbaf;
+    color:#a38866;
 }
-
-a {
-    color:#823919;
-   
+.link {
+    background-color: #f7ebd3;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-bottom: 8px;
 }
+    
 
 a {
     color:#521908;
     text-decoration: none;
-    transition: 0.3s;
     font-size: 30px;
-    background-color: #f7ebd3;
     text-align: center;
+    
   }
-  
-  a:hover {
-    opacity: 0.7;
+ 
+body a:hover {
+    opacity: 0.5;
   }
+
+#página {
+    text-align: right;
+    font-size: 15px;
+    list-style: none;
+    padding-left: 800px;
+}
+
+#dicas {
+text-align:left;
+font-size: 15px;
+list-style: none;
+padding-left:150px;
+}
+
+#página a {    
+color:#521908;
+}
+
+#dicas a {
+color:#521908;
+}
+
+#controle {
+    display:flex;
+}
 
   footer {
     text-align: right;
     font-size: 15px;
-    color:#f7ebd3;
+    color:#823919;
 }
+
+@media (max-width:999px) {
+
+    header {
+        overflow-x:hidden;
+    }
+
+    body {
+        overflow-x:hidden;
+    }
+    
+}
+
