--- a/news.css
+++ b/news.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: #823919;
+    background: white;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -20,10 +20,11 @@ h1,
 h2,
 h3 {
     font-size: 3rem;
-    color: #f7ebd3;
+    color: #823919;
     margin-bottom: 2rem;
     text-align: center;
     line-height: 1.2;
+    padding-top: 30px;
 }
 
 h1 before {
@@ -51,10 +52,10 @@ h2 before {
 }
 
 .form label {
-    color:#fff;
+    color:#ca7b42;
     line-height: 1;
     margin-bottom: 0.5rem;
-
+    text-transform: uppercase;
 }
 
 .form input,
@@ -62,7 +63,7 @@ h2 before {
     font: inherit;
     padding: 0.8rem;
     margin-bottom: 1rem;
-    border:1px solid transparent;
+    border:1px solid #521908;
     border-radius: 8px;
     }
 
@@ -83,7 +84,7 @@ box-shadow: 0 0 0 3px #4dc8ff;
 .form button {
     display:block;
     padding: 1rem;
-    background:#ffdbaf;
+    background:#ca7b42;
     color: #521908;
     font:inherit;
     text-transform: uppercasse;
@@ -97,4 +98,33 @@ box-shadow: 0 0 0 3px #4dc8ff;
 .form button:focus {
     outline: none;
     background: #09d;
+}
+
+#contato {
+text-align:left;
+font-size: 22px;
+list-style: none;
+padding-right: 1100px;
+}
+
+#contato a {
+color: #823919;
+}
+
+footer {
+    text-align: right;
+    font-size: 15px;
+    color:#ffdbaf
+}
+
+@media (max-width:999px) {
+
+    header {
+        overflow-x:hidden;
+    }
+
+    body {
+        overflow-x:hidden;
+    }
+    
 }
