--- a/SITE PAULA 3/style.css
+++ b/SITE PAULA 3/style.css
@@ -1,30 +1,33 @@
 * {
   margin: 0;
   padding: 0;
-}
+  }
 
 a {
-  color:#ffdbaf;
+  color:#521908;
   text-decoration: none;
   transition: 0.3s;
-  font-size: 18px;
-}
+  font-size: 25px;
+  }
 
 a:hover {
   opacity: 0.7;
 }
 
 .logo {
-  font-size: 25px;
+  font-size: 35px;
   text-transform: uppercase;
   letter-spacing: 4px;
-  color:#f7ebd3;
+  color:#521908;
+  text-align: center;
   }
 
   .container {
     display: flex;
     align-items: center;
     padding: 20px;
+    border-left: solid 4px #f7ebd3;
+    border-right: solid 4px #f7ebd3;
 }
 
 .container .image {
@@ -35,42 +38,55 @@ a:hover {
 }
 
 .container .text {
-    flex: 1; /* permite que o texto ocupe o restante do espaço */
+    flex: 1; 
     font-size: 30px;
-    color: #ca7b42; /* ajuste conforme necessário */
-    padding-left: 100px;
-    padding-right: 80Px;
+    color: #ca7b42; 
+    padding-left: 150px;
+    padding-right: 110px;
+    padding-bottom: 25px;
     letter-spacing: 8px;
+    text-align: justify;
     line-height: 2;
   }
 
 
 nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-  background: #521908;
-  height: 13vh;
   
-}
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  height: 16vh;
+  padding-top: 15px;
+  text-align: center;
+  color:#521908;
+  line-height: 2.2;
+  padding-bottom: 15px;
+  border-top: solid 4px #f7ebd3;
+  border-left: solid 4px #f7ebd3;
+  border-right: solid 4px #f7ebd3;
+    }
 
 img {
   background: url("./img/FotoPaula.jpg") no-repeat left top fixed;
   background-size: cover;
   height: 92vh;
-}
-
+    }
 
 .nav-list {
   list-style: none;
-  display: flex;
+  display:flex;
+  padding-bottom: 5px;
+  padding-left: 200px;
+  text-align: justify;
+  font-size: 30px;
+  color:#521908;
+  background-color: #f7ebd3;
+  
 }
 
 .nav-list li {
   letter-spacing: 3px;
-  margin-left: 32px;
-}
+  margin-left: 40px;
+  font-size: 30px;
+  }
 
 .mobile-menu {
   display: none;
@@ -85,17 +101,7 @@ img {
   transition: 0.3s;
 }
 
-aside {
-  color:#ffdbaf;
-  background-color: #ca7b42;
-  text-align: center;
-  border-bottom: 2px solid ;
-  padding-bottom:20px;
-  padding-top: 17px;
-  border-color: #f7ebd3;
-  }
-
- h2 {
+h2 {
   font-size: 30px;
   font-family: sans-serif;
 }  
@@ -106,8 +112,11 @@ p {
 }
 
 footer {
-  color:#fff;
-  background-color: #521908;
+  border-bottom: solid 4px #f7ebd3;
+  border-left: solid 4px #f7ebd3;
+  border-right: solid 4px #f7ebd3;
+  background-color:#f7ebd3;
+  border-radius: 5px;
   text-align:center;
   font-size: 10px;
   padding-top: 18px;
@@ -115,7 +124,7 @@ footer {
  }
 
  footer a{
-  color:#f7ebd3;
+  color:#521908;
  }
 
  footer p {
@@ -148,4 +157,3 @@ footer {
     display: block;
   }
 }
- 
