--- a/sobre.css
+++ b/sobre.css
@@ -5,17 +5,19 @@
 header {
     color:#521908;
     text-align: center;
-    padding-bottom: 15px;
-}
+    }
 
 header h2{
-    padding-bottom: 25px;
-    padding-top: 25px;
+    padding-bottom: 75px;
+    padding-top: 60px;
     text-align: center;
-    padding-right: 15px;
     font-size: 50px;
     background-color: #f7ebd3;
     border-radius: 15px;
+    padding-right: 30px;
+    height: 3vh;
+    display: block;
+    border:#823919 solid 2px;
 }
 header strong {
     color:#521908;
@@ -23,25 +25,21 @@ header strong {
 
 body {
     background-color: white;
-    color:#ca7b42;
+    color:#823919;
     font-size: 30px;
     text-indent: 5rem;
     letter-spacing: 2px;
-    padding-top: 30px;
+    padding-top: 10px;
     padding-bottom: 30px;
     line-height: 2em;
-    padding-left: 40px;
-    padding-right: 40px;
     text-align: justify;
-         
 }
 
 main {
     background: white url("./img/FotoPaula.jpg") no-repeat center;
     height:70vh;
-    padding-bottom: 30px;
-    border-radius: 10px;
-}
+    border-radius: 50px;
+    }
 
 strong {
     color:#ca7b42;
@@ -51,7 +49,7 @@ footer {
 
     text-align: right;
     font-size: 15px;
-    color:#ffdbaf
+    color:#823919;
 }
 
 #página {
@@ -70,10 +68,12 @@ padding-right: 300px;
 
 #página a {    
 color:#521908;
+font-size: 22px;
 }
 
 #início a {
 color:#521908;
+font-size: 22px;
 }
 
 #controle {
@@ -91,3 +91,6 @@ color:#521908;
         
     }
    
+
+
+
