--- a/news.css
+++ b/news.css
@@ -114,7 +114,7 @@ color: #823919;
 footer {
     text-align: right;
     font-size: 15px;
-    color:#ffdbaf
+    color:#521908;
 }
 
 @media (max-width:999px) {
